Extract range editor and add `NoisePointFilter`