@@ -5,31 +5,19 @@ import java.awt.image.Raster;
 import java.awt.image.WritableRaster;
 import java.util.function.Consumer;
 
-import com.google.gson.annotations.SerializedName;
-
-import pelemenguin.texturegen.api.client.terminal.ANSIHelper;
-import pelemenguin.texturegen.api.client.terminal.StringInput;
-import pelemenguin.texturegen.api.client.terminal.TerminalMenu;
+import pelemenguin.texturegen.api.client.terminal.TerminalIntegerRangeEditor;
 import pelemenguin.texturegen.api.client.terminal.TerminalMenuContext;
 import pelemenguin.texturegen.api.client.terminal.TerminalPointFilterEditorProvider;
 import pelemenguin.texturegen.api.generator.GenerationContext;
 import pelemenguin.texturegen.api.util.CommonRegistry;
 import pelemenguin.texturegen.api.util.JsonRegistry;
 import pelemenguin.texturegen.api.util.PointFilter;
+import pelemenguin.texturegen.api.util.IntegerRange;
 
 public sealed abstract class RGBAPointFilter implements PointFilter
     permits RGBAPointFilter.Red, RGBAPointFilter.Green, RGBAPointFilter.Blue, RGBAPointFilter.Alpha {
-
-    @SerializedName("lower_bound")
-    protected int lowerBound;
-    @SerializedName("upper_bound")
-    protected int upperBound;
-    @SerializedName("lower_bound_inclusive")
-    protected boolean lowerBoundInclusive = true;
-    @SerializedName("upper_bound_inclusive")
-    protected boolean upperBoundInclusive = true;
-    @SerializedName("invert")
-    protected boolean invert = false;
+        
+    public IntegerRange range = new IntegerRange();
 
     protected transient int rgbaBand;
     protected transient String rgbaName;
@@ -38,14 +26,12 @@ public sealed abstract class RGBAPointFilter implements PointFilter
     protected transient final int MIN = 0;
 
     public RGBAPointFilter() {
-        this.lowerBound = this.MIN;
-        this.upperBound = this.MAX;
+        this.range.lowerBound = this.MIN;
+        this.range.upperBound = this.MAX;
     }
 
     protected boolean testValue(int value) {
-        boolean lowerPass = (invert ^ lowerBoundInclusive) ? value >= lowerBound : value > lowerBound;
-        boolean upperPass = (invert ^ upperBoundInclusive) ? value <= upperBound : value < upperBound;
-        return invert ^ (lowerPass && upperPass);
+        return this.range.test(value);
     }
     
     @Override
@@ -68,13 +54,7 @@ public sealed abstract class RGBAPointFilter implements PointFilter
 
     @Override
     public String getPointFilterTitle() {
-        String lowerBoundSymbol = lowerBoundInclusive ? "\u2264" : "<";
-        String upperBoundSymbol = invert ? (upperBoundInclusive ? "\u2265" : ">") : (upperBoundInclusive ? "\u2264" : "<");
-        if (invert) {
-            return String.format("RGBA %1$s (%1$s %2$s %3$d or %1$s %4$s %5$d)", this.rgbaName, lowerBoundSymbol, lowerBound, upperBoundSymbol, upperBound);
-        } else {
-            return String.format("RGBA %1$s (%3$d %2$s %1$s %4$s %5$d)", this.rgbaName, lowerBoundSymbol, lowerBound, upperBoundSymbol, upperBound);
-        }
+        return "RGBA %1$s (%2$s)".formatted(this.rgbaName, this.range.getInequationRepresentation(rgbaName));
     }
 
     public static sealed abstract class TerminalEditor implements TerminalPointFilterEditorProvider, TerminalPointFilterEditorProvider.Editor<RGBAPointFilter>
@@ -88,82 +68,9 @@ public sealed abstract class RGBAPointFilter implements PointFilter
         @Override
         public void editorLoop(RGBAPointFilter pointFilter, Consumer<RGBAPointFilter> setter,
                 TerminalMenuContext context) {
-            TerminalMenu menu = new TerminalMenu("")
-                .autoUppercase();
-            menu.addKey('-', "Back")
-                .addKey('L', "Lower Bound: " + ANSIHelper.blue(String.valueOf(pointFilter.lowerBound)), () -> {
-                    menu.updateKeyDescription('L', "Lower Bound: " + ANSIHelper.bold(ANSIHelper.blue("> " + pointFilter.lowerBound + " <")));
-                    String result = new StringInput(menu.getDisplayContent()).allowEmpty().scan(context);
-                    if (result.isBlank()) {
-                        return;
-                    }
-                    try {
-                        int newLowerBound = Integer.parseInt(result);
-                        if (newLowerBound < pointFilter.MIN || newLowerBound > pointFilter.upperBound) {
-                            throw new NumberFormatException();
-                        }
-                        pointFilter.lowerBound = newLowerBound;
-                        setter.accept(pointFilter);
-                    } catch (NumberFormatException e) {
-                        context.outStream().println(ANSIHelper.red("Invalid input. Please enter an integer within %d ~ %d".formatted(pointFilter.MIN, pointFilter.upperBound)));
-                    }
-                    menu.updateKeyDescription('L', "Lower Bound: " + ANSIHelper.blue(String.valueOf(pointFilter.lowerBound)));
-                })
-                .addKey('U', "Upper Bound: " + ANSIHelper.blue(String.valueOf(pointFilter.upperBound)), () -> {
-                    menu.updateKeyDescription('U', "Upper Bound: " + ANSIHelper.bold(ANSIHelper.blue("> " + pointFilter.upperBound + " <")));
-                    String result = new StringInput(menu.getDisplayContent()).allowEmpty().scan(context);
-                    if (result.isBlank()) {
-                        return;
-                    }
-                    try {
-                        int newUpperBound = Integer.parseInt(result);
-                        if (newUpperBound > pointFilter.MAX || newUpperBound < pointFilter.lowerBound) {
-                            throw new NumberFormatException();
-                        }
-                        pointFilter.upperBound = newUpperBound;
-                        setter.accept(pointFilter);
-                    } catch (NumberFormatException e) {
-                        context.outStream().println(ANSIHelper.red("Invalid input. Please enter an integer within %d ~ %d".formatted(pointFilter.lowerBound, pointFilter.MAX)));
-                    }
-                    menu.updateKeyDescription('U', "Upper Bound: " + ANSIHelper.blue(String.valueOf(pointFilter.upperBound)));
-                })
-                .addKey('W', "Lower Bound Inclusive: " + ANSIHelper.blue(String.valueOf(pointFilter.lowerBoundInclusive)), () -> {
-                    pointFilter.lowerBoundInclusive = !pointFilter.lowerBoundInclusive;
-                    menu.updateKeyDescription('W', "Lower Bound Inclusive: " + ANSIHelper.blue(String.valueOf(pointFilter.lowerBoundInclusive)));
-                    setter.accept(pointFilter);
-                })
-                .addKey('P', "Upper Bound Inclusive: " + ANSIHelper.blue(String.valueOf(pointFilter.upperBoundInclusive)), () -> {
-                    pointFilter.upperBoundInclusive = !pointFilter.upperBoundInclusive;
-                    menu.updateKeyDescription('P', "Upper Bound Inclusive: " + ANSIHelper.blue(String.valueOf(pointFilter.upperBoundInclusive)));
-                    setter.accept(pointFilter);
-                })
-                .addKey('I', "Invert: " + ANSIHelper.blue(String.valueOf(pointFilter.invert)), () -> {
-                    pointFilter.invert = !pointFilter.invert;
-                    menu.updateKeyDescription('I', "Invert: " + ANSIHelper.blue(String.valueOf(pointFilter.invert)));
-                    setter.accept(pointFilter);
-                });
-            while (true) {
-                int barLength = 50;
-                int charIndexOfLowerBound = (int) ((pointFilter.lowerBound - pointFilter.MIN) / (double) (pointFilter.MAX - pointFilter.MIN) * barLength);
-                int charIndexOfUpperBound = (int) ((pointFilter.upperBound - pointFilter.MIN) / (double) (pointFilter.MAX - pointFilter.MIN) * barLength);
-                String partBar1 = (pointFilter.invert ? "=" : "-").repeat(Math.max(0, charIndexOfLowerBound));
-                String partBar2 = (pointFilter.invert ? "-" : "=").repeat(Math.max(0, charIndexOfUpperBound - charIndexOfLowerBound - 1));
-                String partBar3 = (pointFilter.invert ? "=" : "-").repeat(Math.max(0, barLength - charIndexOfUpperBound - 1));
-                String split1 = (pointFilter.lowerBoundInclusive ? "|" : (pointFilter.invert ? ")" : "("));
-                String split2 = (pointFilter.upperBoundInclusive ? "|" : (pointFilter.invert ? "(" : ")"));
-                String bar;
-                if (pointFilter.invert) {
-                    bar = ANSIHelper.green(partBar1 + split1) + ANSIHelper.red(partBar2) + ANSIHelper.green(split2 + partBar3);
-                } else {
-                    bar = ANSIHelper.red(partBar1) + ANSIHelper.green(split1 + partBar2 + split2) + ANSIHelper.red(partBar3);
-                }
-                menu.updateDescription(pointFilter.getPointFilterTitle() + "\n\n" + bar + "\n");
-
-                char choice = menu.scan(context);
-                if (choice == '-') {
-                    break;
-                }
-            }
+            IntegerRange range = new TerminalIntegerRangeEditor(pointFilter.range)
+                .fixRange(pointFilter.MIN, pointFilter.MAX).loop(context);
+            pointFilter.range = range;
             setter.accept(pointFilter);
         }
 
